# lodestone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  install.ps1  install.sh  lodestone  lodestone.ps1
.github/workflows/: docker-publish.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: config.py  logging.py  settings.py
backend/app/db/: qdrant.py  sqlitedb.py
backend/app/debug/: cli.py  vector_roundtrip.py
backend/app/debug/samples/: bloodborne.txt  cp2077.txt  dream_of_marriage.txt  ds3.txt  eldenring.txt  food.txt  gow.txt  mobilenet.txt  recipe.txt  sekiro.txt
backend/app/embeddings/: minilm.py
backend/app/ingest/: chunking.py  doc_id.py  ingestion.py
backend/app/llm/: client.py  factory.py  generation.py
backend/app/registry/: models.toml
backend/app/retrieval/: docs_lodestone.py  docs_recall.py  retrieve.py
backend/app/scripts/: cli.py
backend/app/scripts/samples/: clip.txt  doom.txt  eldenring.txt  history1.txt  history2.txt  hollow_knight.txt  lth.txt  rdr2.txt  sample.txt  witcher3.txt
backend/app/tests/: conftest.py  recall_test.json  test_lodestone.py  test_ndcg.py  test_prompt_injection.py  test_recall.py  test_search.py
backend/app/tests/test_cases/: eval.json  ndcg.json  prompt_injection_test.json  recall_test.json
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/src/: App.css  App.tsx  index.css  main.tsx
