[project]
name = "recall"
version = "0.7.0"
description = "Local-first system to store, recall, and semantically search personal documents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.83.0",
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "groq>=1.0.0",
    "openai>=2.21.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
select = ["F", "E9"]
ignore = ["E", "W", "I", "N", "D", "UP", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
typeCheckingMode = "basic"
