[project]
name = "lodestone"
version = "0.10.2"
description = "Local-first system to store, retrieve, and semantically search personal documents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.83.0",
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "groq>=1.0.0",
    "openai>=2.21.0",
    "platformdirs>=4.9.4",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.10.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.26",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.40.0",
]

[tool.setuptools]
packages = ["app"]
